--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-# default h2-console url
-# http://localhost:8080/h2-console
-spring.datasource.url=jdbc:h2:mem:todoDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.show-sql=true
-# thats default server port
-server.port=8080
-# thats default swagger url
-# http://localhost:8080/swagger-ui/
-springdoc.swagger-ui.path=/swagger-ui.html  
+# MySQL database configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:todoDB}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+# Default server port
+server.port=8080
+
+# Swagger URL
+springdoc.swagger-ui.path=/swagger-ui.html
