--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 # springdoc.swagger-ui.path=/swagger-ui.html
 
 # MySQL database configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:todoDB}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:{MYSQL_PORT:3306}/${MYSQL_DB:todoDB}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
