--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@
 # springdoc.swagger-ui.path=/swagger-ui.html
 
 # MySQL database configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:{MYSQL_PORT:3306}/${MYSQL_DB:todoDB}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://${mysql.host:localhost}:${mysql.port:3306}/${mysql.db:todoDB}
+spring.datasource.username=${mysql.user:root}
+spring.datasource.password=${mysql.password:password}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # MySQL-specific Hibernate dialect
