--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>todo-app</artifactId>
 	<version>0.0.2-RELEASE</version>
 	<name>todo-app</name>
+	<packaging>jar</packaging>
 	<description>Spring Boot todo app</description>
 	<properties>
 		<java.version>11</java.version>
